// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard render snapshots 📸 Dashboard should match snap shot 1`] = `
<div
  className="dashboard__flexbox"
>
  <div
    className="bill__wrapper"
  >
    <div
      className="bill__section"
    >
      <SearchBar
        activeTab="allBills"
      />
      <button
        className="btn btn-primary"
        id="add__bill__button"
        onClick={[Function]}
      >
         
        + Add bill
         
      </button>
      <ul
        className="nav nav-tabs"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            onClick={[Function]}
          >
            All bills
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            Notifications
          </a>
        </li>
      </ul>
      <div
        className="bill__list__section"
      >
        <BillDisplay />
      </div>
    </div>
    <div
      className="specific__bill__section"
    >
      <BillSummary />
    </div>
  </div>
</div>
`;

exports[`Dashboard render snapshots 📸 Dashboard should match snap shot on nothing 1`] = `
<div
  className="dashboard__flexbox"
>
  <div
    className="bill__wrapper"
  >
    <div
      className="bill__section"
    >
      <SearchBar
        activeTab=""
      />
      <button
        className="btn btn-primary"
        id="add__bill__button"
        onClick={[Function]}
      >
         
        + Add bill
         
      </button>
      <ul
        className="nav nav-tabs"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            All bills
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            Notifications
          </a>
        </li>
      </ul>
      <div
        className="bill__list__section"
      >
        <div
          className="billsnap-loader loader"
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      className="specific__bill__section"
    >
      <BillSummary />
    </div>
  </div>
</div>
`;

exports[`Dashboard render snapshots 📸 Dashboard should match snap shot on notifications tab 1`] = `
<div
  className="dashboard__flexbox"
>
  <div
    className="bill__wrapper"
  >
    <div
      className="bill__section"
    >
      <SearchBar
        activeTab="owedToYou"
      />
      <button
        className="btn btn-primary"
        id="add__bill__button"
        onClick={[Function]}
      >
         
        + Add bill
         
      </button>
      <ul
        className="nav nav-tabs"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            onClick={[Function]}
          >
            All bills
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link active"
            onClick={[Function]}
          >
            Notifications
          </a>
        </li>
      </ul>
      <div
        className="bill__list__section"
      >
        <PendingBillsContainer />
      </div>
    </div>
    <div
      className="specific__bill__section"
    >
      <BillSummary />
    </div>
  </div>
</div>
`;
